# diffpatch

./: .gitignore  Cargo.toml  README-zh.md  README.md  _typos.toml
benches/: differ.rs  multifile_patcher.rs  patcher.rs
examples/: changes.patch  code.rs  example.patch  example.rs  modified.txt  multifile.rs  myers_diff.rs  original.txt  simple.rs
fixtures/: diff-test1-local.diff  diff-test1.diff  diff-test2.diff  diff-test3.diff
fixtures/code/: complex_after.rs  complex_before.rs  new.py  old.py  simple_after.rs
specs/: 0001-diff-patch.md  0002-patch-multiple.md  0003-differ.md  0004-performance-benchmark.md
src/: differ.rs  lib.rs  main.rs  multipatch.rs  patch.rs  patcher.rs
src/differ/: README.md  common.rs  mod.rs  myers.rs  naive.rs  perf.md  similar.rs  xdiff.rs
src/patcher/: README.md  mod.rs  naive.rs  perf.md  similar.rs
tests/: integration_tests.rs
tutorial/en/: 01_differ_.md  02_patch_.md  03_chunk_.md  04_operation_.md  05_patcher_.md  06_multifilepatch_.md  07_multifilepatcher_.md  08_applyresult_.md  README.md  index.md
tutorial/zh/: 01__differ__.md  02__patch__.md  03__patcher__.md  04__chunk__.md  05__multifilepatch__.md  06__multifilepatcher__.md  README.md
tutorial/zh/diffpatch/: 01__differ__.md  02__patch__.md  03__patcher__.md  04__chunk__.md  05__multifilepatch__.md
