[package]
name = "diffpatch"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = "A library for parsing, creating, and applying Git-style diffs"
readme = "README.md"
categories = ["development-tools"]
keywords = ["diff", "patch", "git", "text", "comparison"]

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
], optional = true }

[dev-dependencies]
tempfile = "3.19"
git2 = "0.20"
divan = "0.1.21"
fastrand = "2.0"

[[bin]]
name = "diffpatch-cli"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "differ"
harness = false

[[bench]]
name = "patcher"
harness = false

[[bench]]
name = "multifile_patcher"
harness = false
