[package]
name = "patcher"
version = "0.2.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/patcher"
repository = "https://github.com/tyrchen/patcher"
homepage = "https://github.com/tyrchen/patcher"
description = "patcher is a Rust library for generating and applying Git-style unified diff patches."
readme = "README.md"
categories = ["development-tools"]
keywords = ["diff", "patch", "git", "text", "comparison"]

[dependencies]
anyhow = "1.0"
levenshtein = "1.0"
similar = "2.7.0"
thiserror = "2.0"
tracing = "0.1.41"

[dev-dependencies]
divan = "0.1.21"
fastrand = "2.0"
git2 = "0.20"
tempfile = "3.19"

[lints.clippy]
needless-range-loop = "allow"

[[bench]]
name = "differ"
harness = false

[[bench]]
name = "patcher"
harness = false

[[bench]]
name = "multifile_patcher"
harness = false
